crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__includes__include.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/includes/include
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "This is include 1.\n" [Continue]
> "This is include 2.\n" [Continue]
> "This is the main file.\n" [Done]
outcome: Done
