crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier3__includes__included-file-trailing-weave.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier3/includes/included-file-trailing-weave
oracle: 2, brink: 2, matched: 2
passing: 2/2

=== episode [0] === PASS
> "The included file opens a weave.\n" [Choices: "first branch" (0), "second branch" (1) -> 0]
> "first branch\n" [Continue]
> "and gathers, with no terminator\n" [Done]
outcome: Error

=== episode [1] === PASS
> "The included file opens a weave.\n" [Choices: "first branch" (0), "second branch" (1) -> 1]
> "second branch\n" [Continue]
> "and gathers, with no terminator\n" [Done]
outcome: Error
